# NeuroSymbolic-Network-for-Handwritten-Symbol-Understanding

./: $null  $null'  .gitignore  CLAUDE.md  INTEGRATION_COMPLETE.md  QUICK_START.py  README.md  changes.txt  evolvable_colab.ipynb  neurolog_colab.ipynb  neurolog_colab_torch.ipynb  proposed_changes.docx  proposed_changes.txt  pyproject.toml  requirements.txt  test_integration.py  tmpclaude-5ded-cwd  train_colab.ipynb  ~$oposed_changes.docx
.claude/: settings.local.json
docs/: DATA_SETUP.md  api_specification.md  architecture_v1_baseline.md  architecture_v2_target.md  papers.txt  training_guide.md
experiments/: ablations.py  baseline.py  comparison.py
results/: progress.txt
scripts/: debug_import.py
src/: main.py  setup_project_structure.py  ui_app.py
src/bridge/: neurosymbolic_connector.py
src/config/: hyperparameters.py  task_definition.py
src/data/: augment_symbols.py  clean_originals.py  data_generator.py  dataset.py  expression_dataset.py  loader.py
src/evaluation/: __init__.py  ablation_studies.py  metrics.py
src/evolvable/: __init__.py  dataset.py  evolution.py  machine_coaching.py  organism.py  run_experiment.py  translator.py
src/integration/: compositor.py  semantic_loss.py  training_loop.py
src/neural/: README.md  __init__.py  cnn.py  digit_recognizer.py  lstm_recognizer.py  make_operators.py  mnist_loader.py  model.py  neural_interface.py  operator_recognizer.py  train.py  (+10 more)
tests/: test.py  test_data.py  test_dataset.py  test_integration.py  test_neural.py  test_symbolic.py  test_symbolic_standalone.py  test_utils.py  visualize_data.py
(+14 files in other folders)
