[tool.poetry]
name = "neurosymbolic_mvp"
version = "0.1.0"
description = "An end-to-end MVP of a neuro-symbolic system."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"